--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,20 @@
 annotated-types==0.7.0
 asgiref==3.8.1
+black==24.8.0
 certifi==2024.8.30
 charset-normalizer==3.3.2
+click==8.1.7
 Django==5.1.1
+django-stubs==5.1.0
+django-stubs-ext==5.1.0
 idna==3.10
+isort==5.13.2
+mypy-extensions==1.0.0
 numpy==2.1.1
+packaging==24.1
 pandas==2.2.3
+pathspec==0.12.1
+platformdirs==4.3.6
 pydantic==2.9.2
 pydantic_core==2.23.4
 python-dateutil==2.9.0.post0
@@ -13,6 +22,8 @@ pytz==2024.2
 requests==2.32.3
 six==1.16.0
 sqlparse==0.5.1
+types-PyYAML==6.0.12.20240917
+typing==3.7.4.3
 typing_extensions==4.12.2
 tzdata==2024.2
 urllib3==2.2.3
